# DPG_Better_NodeEditor

./: DDLinkHandler.py  DDNodeEditorPopup.py  ModeNodeEditor.py  ModelGen.py  ModelNodeEditor.py  Node.py  NodeAtrManager.py  NodeEditor.py  NodeEditorPopup.py  NodeType.py  README.md  i18.py  main.py  pyproject.toml
dd_game_type/: base.py
dd_game_type/buff/: buff.py
dd_game_type/effect/: effect.py
dd_game_type/file/: buff.py  effect.py  file_manager.py  hero_info.py  loot.py  trait.py
dd_game_type/hero/: hero.py  info.py
dd_game_type/loot/: loot.py
dd_game_type/trait/: trait.py
locale/zh_CN/LC_MESSAGES/: NodeEditor.po
test/: run.py  test.py  阿比盖尔_heroinfo.json
utils/: Base.py  BiDirectionalDict.py
