[tool.poetry]
authors = ["LIC <1061628649@qq.com>"]
description = ""
license = "MIT"
name = "pdg-node-editor"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dearpygui = "^2.0.0"
python = "^3.12"
pydantic = "^2.10.2"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.31.1"
ruff = "^0.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poe.tasks]
format = "ruff format ."
test = "python test/run.py"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q", "I"]

[tool.ruff.lint.isort]
known-first-party = ['tas']

[tool.pyright]
exclude = ["lib", "**/.*", "venv"]
pythonPlatform = "Windows"
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
typeCheckingMode = "strict"
